Add user id header to account filtering functional tests