@@ -41,8 +41,6 @@ class AccountFilteringTest extends AccountHelperBase {
 
     @BeforeAll
     public void startUp() throws JsonProcessingException {
-        bearer = Map.of(HttpHeaders.AUTHORIZATION, BEARER + accessToken);
-
         systemAdminUser = createSystemAdminAccount();
 
         PiUser piUser = new PiUser();
@@ -53,8 +51,7 @@ class AccountFilteringTest extends AccountHelperBase {
         List<PiUser> thirdPartyList = new ArrayList<>();
         thirdPartyList.add(piUser);
 
-        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, systemAdminUser.getUserId());
+        Map<String, String> headers = addAuthHeader();
 
         Response createdResponse =
             doPostRequest(CREATE_PI_ACCOUNT, headers, objectMapper.writeValueAsString(thirdPartyList));
@@ -62,26 +59,39 @@ class AccountFilteringTest extends AccountHelperBase {
         thirdPartyUserId = getCreatedAccountUserId(createdResponse);
     }
 
-    private void verifyFilteringController(Map<String, String> requestParams) {
-        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, bearer, requestParams);
+    private Map<String, String> addAuthHeader() {
+        bearer = Map.of(HttpHeaders.AUTHORIZATION, BEARER + accessToken);
 
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(ISSUER_ID, systemAdminUser.getUserId());
+
+        return headers;
+    }
+
+    private void verifyFilteringController(Map<String, String> requestParams) {
+        Map<String, String> headers = addAuthHeader();
+        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, headers, requestParams);
         assertThat(response.getStatusCode()).isEqualTo(OK.value());
 
         Page<PiUser> returnedPage = response.getBody().as(GET_ALL_USERS_TYPE);
         assertThat(returnedPage.getTotalElements()).isEqualTo(1);
-        assertThat(returnedPage.getContent().get(0))
+        assertThat(returnedPage.getContent().getFirst())
             .matches(user -> user.getUserId().equals(systemAdminUser.getUserId()));
     }
 
     @AfterAll
     public void teardown() {
-        doDeleteRequest(TESTING_SUPPORT_DELETE_ACCOUNT_URL + TEST_EMAIL_PREFIX, bearer);
-        doDeleteRequest(String.format(DELETE_ACCOUNT, thirdPartyUserId), bearer);
+        Map<String, String> headers = addAuthHeader();
+        
+        doDeleteRequest(TESTING_SUPPORT_DELETE_ACCOUNT_URL + TEST_EMAIL_PREFIX, headers);
+        doDeleteRequest(String.format(DELETE_ACCOUNT, thirdPartyUserId), headers);
     }
 
     @Test
     void testGetAllThirdPartyAccounts() {
-        Response getThirdParties = doGetRequest(GET_ALL_THIRD_PARTY_ACCOUNTS, bearer);
+        Map<String, String> headers = addAuthHeader();
+
+        Response getThirdParties = doGetRequest(GET_ALL_THIRD_PARTY_ACCOUNTS, headers);
 
         assertThat(getThirdParties.getStatusCode()).isEqualTo(OK.value());
 
@@ -96,7 +106,9 @@ class AccountFilteringTest extends AccountHelperBase {
         Map<String, String> requestParams = new ConcurrentHashMap<>();
         requestParams.put("provenances", UserProvenances.THIRD_PARTY.toString());
 
-        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, bearer, requestParams);
+        Map<String, String> headers = addAuthHeader();
+
+        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, headers, requestParams);
 
         assertThat(response.getStatusCode()).isEqualTo(OK.value());
 
@@ -139,7 +151,9 @@ class AccountFilteringTest extends AccountHelperBase {
         requestParams.put("pageSize", "1");
         requestParams.put("pageNumber", "1");
 
-        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, bearer, requestParams);
+        Map<String, String> headers = addAuthHeader();
+
+        Response response = doGetRequestWithRequestParams(GET_ACCOUNTS_EXCEPT_THIRD_PARTY, headers, requestParams);
 
         assertThat(response.getStatusCode()).isEqualTo(OK.value());
 
